<resources>
    <string name="app_name">HBH Service Engineer</string>
    <string name="empty_error">This field is required.</string>
    <string name="invalid_email">Please enter valid email id.</string>
    <string name="enter_ten_digits_number">Enter 10 digits Mobile Number</string>
    <string name="valid_number">Enter Valid Mobile Number.</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="aadhaar_valid">Please enter valid Aadhaar number!!</string>
    <string name="pan_card_valid">Please enter valid PAN number!!</string>
    <string name="ifsc_valid">Please enter valid IFSC!!</string>
    <string name="account_valid">Please enter valid Account Number!!</string>
    <string name="amount_valid">Please enter valid amount</string>
    <string name="exit_msg">Are you sure you want to exit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="password_not_match">Password and Confirm Password does not match.</string>
    <string name="alert">Alert!!</string>
    <string name="enable_permission">Enable permission Manually</string>
    <string name="permit_manually">Permit Manually</string>
    <string name="continue_with_phone_number">Continue with Phone Number</string>
    <string name="continue_with_social_networks">Continue with Social Networks</string>
    <string name="connect_via_social_media">Connect via Social Media</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="what_s_your_phone_number">What\'s your phone number?</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_the_one_time_password">Enter the One Time Password</string>
    <string name="please_enter_the_4_digit_verification">Please enter the 4 digit verification</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="register_your_details">Register your details</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_mail_id">Enter your email id</string>
    <string name="field_empty">Field can\'t be empty!</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_in">Already have an account?<font fgcolor='#00A651'> Sign In</font></string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="sign">Sign</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_your_email_address_and_n_recover_password">Enter your email address and \n recover password</string>
    <string name="password">Password</string>
    <string name="forget">Forgot</string>
    <string name="verification">Verification</string>
    <string name="otp">OTP</string>
    <string name="youremail_gmail_com">Enter address…</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="reset">Reset</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="up">Up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Password</string>
    <string name="new_password">New password</string>
    <string name="conform_password">Confirm Password</string>
    <string name="enter_mobile_no">Enter your mobile number</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="notification">Notifications</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="logout">Logout</string>
    <string name="ifsc_code">IFSC CODE-</string>
    <string name="type">Type</string>
    <string name="submit">Submit</string>
    <string name="save_details">Save Details</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="message">Message (Optional)</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="add">Add</string>
    <string name="default_notification_channel_id">10001</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_new_password_and_confirm_nto_login_into_your_account">Enter your new password and confirm\nto login into your account</string>
    <string name="email_gmail_com">Email@gmail.com</string>
    <string name="register">Register</string>
    <string name="_91">+91</string>
    <string name="my_package">My Package</string>
    <string name="faq">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="term_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="app_version">App Version : 1.0.1</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="back_arrow">back_Arrow</string>
    <string name="change_password">Change Password</string>
    <string name="image">image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save_password">Save Password</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="no_packages_found_in_this_page">No packages found in this page.</string>
    <string name="try_again">Try Again</string>
    <string name="no_results_found">No results found</string>
    <string name="the_search_could_not_be_found_please_check_spelling_or_write_another_word">The search could not be found, please check spelling or write another word.</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="could_not_connect_to_internet_please_check_your_wifi_or_mobile_data_to_connect">Could not connect to internet please check your wifi or mobile data to connect</string>
    <string name="enter_a_valid_number">Enter a valid number</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="check_your_email_for_a_link_to_reset_your_password_if_it_doesn_t_appear_within_a_few_minutes_check_your_spam_folder">Check your email for a link to reset your password. If it doesn’t appear within a few minutes, check your spam folder.</string>
    <string name="return_to_sign_in">Return to Sign In</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="passwordStrong">The password must contain both lower &amp; upper case characters,one number,one special symbol &amp; at least 8 characters long.</string>
    <string name="retry">Retry</string>
    <string name="please_check_your_connection">Please Check Your Internet Connection</string>
    <string name="needs_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="are_you_sure_want_to_exit">Are you sure you want to Logout?</string>
    <string name="are_you_sure_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="close">Close</string>
    <string name="login">Log In</string>
    <string name="email_address">Email address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="rupee_symbol">₹</string>
    <string name="please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="invalid_token">Invalid Token</string>
    <string name="password_change_successfully">Password Changed Successfully</string>
    <string name="back_to_login">Back To Login</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="verify">Verify</string>
    <string name="enter_otp_msg">Please enter the OTP sent to your mobile phone or email account.</string>
    <string name="delete">Delete</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="save">Save</string>
    <string name="in">In</string>
    <string name="log">Log</string>
    <string name="setting">Setting</string>
    <string name="login_msg">Your Gateway to Access. Sign In and \nExplore</string>
    <string name="signin">Sign in</string>
    <string name="complaints">Complaints</string>
    <string name="hello">Hello </string>
    <string name="hi_welcome">Hi, Welcome</string>
    <string name="assigned">Assigned</string>
    <string name="today_s_status">Today\'s Status</string>
    <string name="_0">0</string>
    <string name="mohit_chouhan">Mohit Chouhan</string>
    <string name="in_progress">In progress</string>
    <string name="_1">1</string>
    <string name="closed">Closed</string>
    <string name="_4">4</string>
    <string name="recent_complaints">Recent Complaints</string>
    <string name="complaint_id">Complaint ID</string>
    <string name="complaint_id_">Complaint ID : </string>
    <string name="_17">17</string>
    <string name="date">Date : </string>
    <string name="_01_aug_2023_11_24_am">01 Aug 2023, 11:24 AM</string>
    <string name="view_more">View More</string>
    <string name="machine_serial_number">Machine Serial Number : </string>
    <string name="_234235324565">234235324565</string>
    <string name="model">Model : </string>
    <string name="account">Account</string>
    <string name="_91_8871645818">+91 8871645818</string>
    <string name="pending">Pending</string>
    <string name="expertise">Expertise</string>
    <string name="php">php</string>
    <string name="sql">sql</string>
    <string name="webservice">webservice</string>
    <string name="web_panel">web panel</string>
    <string name="account_center">Account Center</string>
    <string name="help_center">Help Center</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="complaints_id">Complaints Id</string>
    <string name="category">Category</string>
    <string name="_category">Category :</string>
    <string name="cateroryy">Category :</string>
    <string name="mobile">Mobile</string>
    <string name="modell">Model</string>
    <string name="fgsdgh">fgsdgh</string>
    <string name="machine_serial_numberr">Machine Serial Number :</string>
    <string name="datee">Date :</string>
    <string name="_31_jul_2023_3_31_pm">31 jul 2023,3:31 PM</string>
    <string name="filters">Filters</string>
    <string name="clear_all">Clear all</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="customer">Customer</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="call_type">Call Type</string>
    <string name="settings">Settings</string>
    <string name="send_push_notifications">Send Push Notifications</string>
    <string name="todo">TODO</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="settingss">Settings</string>
    <string name="check_out_information">Check Out Information</string>
    <string name="location_">Location :</string>
    <string name="g_1_29_ab_rd_vishnu_puri_colony_indore_madhya_pradesh_452014_india">G-1, 29, AB Rd, Vishnu Puri Colony, Indore Madhya Pradesh 452014, India</string>
    <string name="date_">Date :</string>
    <string name="write_comment_here">Write comment here</string>
    <string name="check_in">Check In</string>
    <string name="comment__optional">Comment (Optional)</string>
</resources>