<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.dollop.hbh_service_engineer.main_package.fragment.Fragment_HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/complaints"
        android:name="com.dollop.hbh_service_engineer.main_package.fragment.Fragment_Complaints"
        android:label="@string/complaints"
        tools:layout="@layout/fragment_complaints" />

    <fragment
        android:id="@+id/profile"
        android:name="com.dollop.hbh_service_engineer.main_package.fragment.Fragment_ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />


</navigation>