<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    android:id="@+id/mcv_home_progress"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_2sdp"
                android:gravity="center_vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="@dimen/_15sdp">

                    <ImageView
                        android:id="@+id/img_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:importantForAccessibility="no"
                        android:src="@drawable/mystry" />


                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/mohit_chouhan"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="SmallSp,TextSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/ll_serial_no"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:text="@string/machine_serial_number"
                    android:textColor="@color/complaintId"
                    android:textSize="11sp"
                    tools:ignore="SmallSp,TextSizeCheck" />

                <TextView
                    android:id="@+id/tv_serial_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/_234235324565"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="TextSizeCheck,VisualLintBounds" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/ll_modelno"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:text="@string/model"
                    android:textColor="@color/complaintId"
                    android:textSize="11sp"
                    tools:ignore="SmallSp,TextSizeCheck" />

                <TextView
                    android:id="@+id/tv_model_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/_234235324565"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextSizeCheck,VisualLintBounds" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_complainid"
                    android:layout_marginEnd="@dimen/_2sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:text="@string/complaint_id_"
                        android:textColor="@color/complaintId"
                        android:textSize="11sp"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/tv_complaints_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/_17"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_below="@+id/ll_complainid"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_datestr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-1dp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:text="@string/date"
                        android:textColor="@color/complaintId"
                        android:textSize="11sp"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tv_datestr"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/_01_aug_2023_11_24_am"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        tools:ignore="SmallSp,TextSizeCheck" />

                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_10sdp"
                    android:layout_margin="5dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/mcv_btn"
                    app:cardBackgroundColor="@color/viewmore">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="2dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/view_more"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            tools:ignore="TextSizeCheck" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


            </RelativeLayout>

        </LinearLayout>

</com.google.android.material.card.MaterialCardView>