<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_bottom_sheet_filter"
    android:orientation="vertical"
    android:paddingTop="12dp"
    android:id="@+id/llCheckIn"
    android:layout_height="match_parent">

    <View
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/bg_view"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/check_out_location"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical"
                android:layout_marginVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/check_out_information"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:fontFamily="@font/poppins_medium"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:id="@+id/tv_date"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="27 Oct 2023 19:06 PM"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/location_"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:id="@+id/tv_location"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/g_1_29_ab_rd_vishnu_puri_colony_indore_madhya_pradesh_452014_india"
                        />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment__optional"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:layout_marginVertical="1dp"
                android:fontFamily="@font/poppins_medium"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginHorizontal="1dp"
                app:cardCornerRadius="8dp"
                android:id="@+id/mcv_comment"
                app:strokeColor="@color/black"
                app:strokeWidth="0.5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:id="@+id/et_comment"
                    android:hint="@string/write_comment_here"
                    android:textSize="12sp"
                    android:gravity="start"
                    android:layout_margin="7dp"
                    android:fontFamily="@font/poppins_medium"/>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/blue"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="13dp"
            android:id="@+id/mcv_check_btn"
            android:layout_marginHorizontal="1dp"
            app:cardCornerRadius="12dp"
            app:strokeWidth="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in"
                android:id="@+id/tv_check"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginVertical="11dp"
                android:layout_gravity="center"
                />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>